service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  labels:
    name: website-service
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: website
